vercre-issuer/tests/snapshots/auth_code_flow__token.snap
---
source: vercre-vci/tests/auth_code_flow.rs
assertion_line: 109
expression: response
---
access_token: "[access_token]"
token_type: Bearer
expires_in: 900
c_nonce: "[c_nonce]"
c_nonce_expires_in: 600
authorization_details:
  - type: openid_credential
    format: jwt_vc_json
    credential_definition:
      type:
        - VerifiableCredential
        - EmployeeIDCredential

