vercre-issuer/tests/snapshots/auth_code_flow__vc.snap
---
source: vercre-issuer/tests/auth_code_flow.rs
assertion_line: 40
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://vercre.io/credentials/v1"
id: "http://vercre.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
issuer: "http://vercre.io"
issuanceDate: "[issuanceDate]"
credentialSubject:
  email: normal.user@example.com
  familyName: Person
  givenName: Normal
  id: "did:jwk:eyJjcnYiOiJFZDI1NTE5Iiwia3R5IjoiT0tQIiwidXNlIjoic2lnIiwieCI6IjNMZzl5dmlBbVREQ3VWT3lMWEkzbHE5UzJwSG03M3lyM3d3QWtqd0NBaHcifQ"
